rust/kcl-lib/tests/kw_fn_unlabeled_but_has_label/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing kw_fn_unlabeled_but_has_label.kcl
---
KCL Semantic error

  × semantic: The function `add` expects an unlabeled first argument (`@x`),
  │ but it is labelled in the call. You might try removing the `x = `
   ╭─[5:15]
 4 │ 
 5 │ two = add(x = 1)
   ·               ┬
   ·               ╰── main
   ╰────
